force-app/main/default/main/default/objects/Coverage_Period__c/Coverage_Period__c.object-meta.xml
<CustomObject>
    <label>Coverage Period</label>
    <nameField>
        <label>Coverage Period Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Coverage Periods</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>