force-app/main/default/main/default/objects/Coverage_Period__c/fields/Coverage_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_End_Date__c</fullName>
    <inlineHelpText>Date until which this coverage is applicable</inlineHelpText>
    <label>Coverage End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>