force-app/main/default/main/default/objects/Coverage_Period__c/fields/Coverage_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Start_Date__c</fullName>
    <inlineHelpText>Date from which this coverage is applicable</inlineHelpText>
    <label>Coverage Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>