force-app/main/default/main/default/objects/Coverage_Period__c/fields/Open_Enrollment_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Enrollment_Start_Date__c</fullName>
    <inlineHelpText>Date from which users can enroll in this coverage</inlineHelpText>
    <label>Open Enrollment Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>